5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1706_3034.log
== TEST (2019-04-29 19:44:34) 
-- CODE:
x= float(input())

if (x >= -4 and x <0):
	f= (x**0,5)
	fx= f*-1
elif(x=0):
	fx=0
elif(x>0 and x<=1):
	fx=(x**0,5)
else:
	fx='entrada invalida'
	print(fx)
-- ERROR:
File "XXXX", line 6
    elif(x=0):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:51:58) 
-- CODE:
x= float(input())

if (x >= -4 and x <0):
	f= (x**0,5)
	fx= f*-1
elif(x=0):
	fx=0
elif(x>0 and x<=1):
	fx=(x**0,5)
else:
	fx='entrada invalida'
	print(fx)
-- ERROR:
File "XXXX", line 6
    elif(x=0):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:53:01) 
-- CODE:
x= float(input())

if (x >= -4 and x <0):
	f= (x**0,5)
	fx= f*0
elif(x=0):
	fx=0
elif(x>0 and x<=1):
	fx=(x**0,5)
else:
	fx='entrada invalida'
	print(fx)
-- ERROR:
File "XXXX", line 6
    elif(x=0):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:53:23) 
-- CODE:
x= float(input())

if (x >= -4 and x <0):
	f= (x**0.5)
	fx= f*0
elif(x=0):
	fx=0
elif(x>0 and x<=1):
	fx=(x**0.5)
else:
	fx='entrada invalida'
	print(fx)
-- ERROR:
File "XXXX", line 6
    elif(x=0):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
